chore: some simplifications